--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,4 +42,11 @@
         android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="4dp"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cheat_button"
+        android:text="@string/cheat_button"
+        android:layout_marginTop="24dp" />
+
 </LinearLayout>
